Updates to fix title on mobile

--- a/style.scss
+++ b/style.scss
@@ -220,7 +220,7 @@ img {
 
     @include mobile {
       font-size: 32px;
-      padding-top: 150px;
+      padding-top: 100px;
     }
   }
 
